# docs-html-konwerter

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
src/docs_html_konwerter/: __init__.py  doc_konwerter.py
tests/: helper.py  test1.py
tests/testdata/: ProstePowtorz1.html  TestDokument1.html  TestDokument2.html  TestDokument3.html  TestDokumentTLinie.html  TestHelloPage.html
