[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docs-html-konwerter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "xml-konwerter",
]

[project.urls]
Repository = "https://github.com/stanislawbartkowski/docs-html-konwerter"

[tool.setuptools.packages.find]
where = ["src"]
