[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-html-konwerter"
version = "1.1.0"
requires-python = ">=3.10"
dependencies = [
    "xml-konwerter",
]

[project.urls]
Repository = "https://github.com/stanislawbartkowski/docs-html-konwerter"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test*.py"]
